14 importar componente personas en app-root

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<span>¡{{ title }} está ejecutandose!</span>
-<span>{{ saludo }}</span>
+<div style="text-align: center">
+  <h1>Bienvenido {{titulo}}</h1>
+  <app-personas></app-personas>
+</div>
