--- a/src/app/persona/persona.component.html
+++ b/src/app/persona/persona.component.html
@@ -1,5 +1,8 @@
 <p>Nombre: {{ nombre }} Apellido: {{ apellido }} Edad: {{ edad }}</p>
-<div (keyup)="0">
+
+
+
+<!-- <div (keyup)="0">
   <label for="entrada">Repetidor: </label>
   <input type="text" #entrada />{{entrada.value}}
-</div>
+</div> -->
