--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col">
       <h1>Listado personas</h1>
+      <button class="btn btn-primary" [disabled]="deshabilitar">Agregar persona</button>
       <app-persona></app-persona>
     </div>
   </div>
