22 event binding con alerta de boton mejorado

--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col">
       <h1>Listado personas</h1>
-      <button class="btn btn-primary" [disabled]="deshabilitar">Agregar persona</button>
+      <button class="btn btn-primary" [disabled]="deshabilitar" (click)="agregarPersona()">Agregar persona</button>
+      <p>{{mensaje}}</p>
       <app-persona></app-persona>
     </div>
   </div>
