--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -17,7 +17,7 @@
         name="titpers"
         id="titpers"
         class="form-control"
-        (input)="modificarTitulo($event)"
+        [(ngModel)]="titulo"
       />
       {{titulo}}
     </div>
