--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -9,7 +9,10 @@
       >
         Agregar persona
       </button>
-      <p *ngIf="mostrar">{{ mensaje }} con el titulo de {{titulo}}</p>
+      <p *ngIf="mostrar; else sinPersona">{{ mensaje }} con el titulo de {{titulo}}</p>
+      <ng-template #sinPersona>
+        <p>No se ha agregado ninguna persona</p>
+      </ng-template>
       <app-persona></app-persona>
       <label for="titpers">Titulo Persona</label>
       <input
